crates/oxidoc/tests/snapshots/golden_writer__latex__figure__figure-captioned.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{figure}
\centering
\pandocbounded{\includegraphics[keepaspectratio,alt={a caption}]{pic.png}}
\caption{a caption}
\end{figure}
