crates/oxidoc/tests/snapshots/golden_writer__latex__figure__figure-no-alt.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\pandocbounded{\includegraphics[keepaspectratio]{pic.png}}
